product_docs/docs/ocl_connector/13.1.4.1/03_open_client_library/01_installing_and_configuring_the_ocl_connector.mdx
---
title: "Installing and Configuring the OCL Connector"
---

<div id="installing_and_configuring_the_ocl_connector" class="registered_link"></div>


You can use an RPM package, a native package, or a graphical installer to install or update the EDB OCL Connector.

## Installing the Connector with an RPM Package

You can install the OCL Connector using an RPM package on the following platforms:

-   [RHEL 7](../#rhel7)
-   [RHEL 8](../#rhel8)
-   [CentOS 7](../#centos7)
-   [CentOS 8](../#centos8)

<div id="rhel7" class="registered_link"></div>

### On RHEL 7

Before installing the OCL Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

Enable the optional, extras, and HA repositories:

> ``` text
> subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-oci`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing OCL Connector**

After saving your changes to the configuration file, use the following commands to install the OCL Connector:

> ``` 
> yum install edb-oci
>
> yum install edb-oci-devel
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="rhel8" class="registered_link"></div>

### On RHEL 8



Before installing the OCL Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `codeready-builder-for-rhel-8-\*-rpms` repository:

> ``` text
> ARCH=$( /bin/arch )
> subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-oci`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing OCL Connector**

After saving your changes to the configuration file, use the below command to install the OCL Connector:

> ``` text
> dnf install edb-oci
>
> dnf install edb-oci-devel
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos7" class="registered_link"></div>

### On CentOS 7



Before installing the OCL Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
> ```

<div class="note">

<div class="title">

Note

</div>

You may need to enable the `[extras]` repository definition in the `CentOS-Base.repo` file (located in `/etc/yum.repos.d`).

</div>

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-oci`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing OCL Connector**

After saving your changes to the configuration file, use the following command to install the OCL Connector:

> ``` text
> yum install edb-oci
>
> yum install edb-oci-devel
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

<div id="centos8" class="registered_link"></div>

### On CentOS 8



Before installing the OCL Connector, you must install the following prerequisite packages, and request credentials from EDB:

Install the `epel-release` package:

> ``` text
> dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
> ```

Enable the `PowerTools` repository:

> ``` text
> dnf config-manager --set-enabled PowerTools
> ```

You must also have credentials that allow access to the EDB repository. For information about requesting credentials, visit:

> <https://info.enterprisedb.com/rs/069-ALB-339/../images/Repository%20Access%2004-09-2019.pdf>

After receiving your repository credentials you can:

1.  Create the repository configuration file.
2.  Modify the file, providing your user name and password.
3.  Install `edb-oci`.

**Creating a Repository Configuration File**

To create the repository configuration file, assume superuser privileges, and invoke the following command:

> ``` text
> dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

The repository configuration file is named `edb.repo`. The file resides in `/etc/yum.repos.d`.

**Modifying the file, providing your user name and password**

After creating the `edb.repo` file, use your choice of editor to ensure that the value of the `enabled` parameter is `1`, and replace the `username` and `password` placeholders in the `baseurl` specification with the name and password of a registered EDB user.

> ``` text
> [edb]
> name=EnterpriseDB RPMs $releasever - $basearch
> baseurl=https://<username>:<password>@yum.enterprisedb.com/edb/redhat/rhel-$releasever-$basearch
> enabled=1
> gpgcheck=1
> gpgkey=file:///etc/pki/rpm-gpg/ENTERPRISEDB-GPG-KEY
> ```

**Installing OCL Connector**

After saving your changes to the configuration file, use the following command to install the OCL Connector:

> ``` text
> dnf install edb-oci
>
> dnf install edb-oci-devel
> ```

When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve.

### Updating an RPM Installation

If you have an existing `OCL Connector` RPM installation, you can use yum or dnf to upgrade your repository configuration file and update to a more recent product version. To update the `edb.repo` file, assume superuser privileges and enter:

-   On RHEL or CentOS 7:

    > `yum upgrade edb-repo`

-   On RHEL or CentOS 8:

    > `dnf upgrade edb-repo`

yum or dnf will update the `edb.repo` file to enable access to the current EDB repository, configured to connect with the credentials specified in your `edb.repo` file. Then, you can use yum to upgrade any installed packages:

-   On RHEL or CentOS 7:

    > `yum upgrade edb-oci`
    >
    > `yum upgrade edb-oci-devel`

-   On RHEL or CentOS 8:

    > `dnf upgrade edb-oci`
    >
    > `dnf upgrade edb-oci-devel`

## Installing the Connector on an SLES 12 Host



You can use the zypper package manager to install the connector on an SLES 12 host. zypper will attempt to satisfy package dependencies as it installs a package, but requires access to specific repositories that are not hosted at EDB. Before installing the connector, use the following commands to add EDB repository configuration files to your SLES host:

> `zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo`

After creating the repository configuration files, use the `zypper refresh` command to refresh the metadata on your SLES host to include the EDB repositories.

When prompted for a `User Name` and `Password`, provide your connection credentials for the EDB repository. To request credentials for the repository, visit [the EDB website](https://www.enterprisedb.com/repository-access-request).

Before installing EDB Postgres Advanced Server or supporting components, you must also add SUSEConnect and the SUSE Package Hub extension to the SLES host, and register the host with SUSE, allowing access to SUSE repositories. Use the commands:

> `zypper install SUSEConnect`  
> `SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'`  
> `SUSEConnect -p PackageHub/12.4/x86_64`  
> `SUSEConnect -p sle-sdk/12.4/x86_64`

For detailed information about registering a SUSE host, visit the [SUSE website](https://www.suse.com/support/kb/doc/?id=7016626).

Then, you can use the zypper utility to install the connector:

> `zypper install edb-oci`
>
> `zypper install edb-oci-devel`

## Installing the Connector on a Debian or Ubuntu Host



To install a DEB package on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit [the EDB website](https://www.enterprisedb.com/repository-access-request).

The following steps will walk you through on using the EDB apt repository to install a DEB package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:

    > ``` text
    > sudo su –
    > ```

2.  Configure the EDB repository:

    On Debian 9:

    > ``` text
    > sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    On Debian 10:

    1.  Set up the EDB repository:

    > ``` text
    > sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    > ```

    1.  Substitute your EDB credentials for the `username` and `password` in the following command:

    > ``` text
    > sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    > ```

3.  Add support to your system for secure APT repositories:

    > ``` text
    > apt-get install apt-transport-https
    > ```

4.  Add the EDB signing key:

    > ``` text
    > wget -q -O - https://<username>:<password>@apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
    > ```

5.  Update the repository metadata:

    > ``` text
    > apt-get update
    > ```

6.  Install DEB package:

    > ``` text
    > apt-get install edb-oci
    > apt-get install edb-oci-dev
    > ```

## Using the Graphical Installer to Install the Connector



You can use the EDB Connectors Installation wizard to add the EDB OCL connector to your system; the wizard is available at the [EDB website](https://www.enterprisedb.com/software-downloads-postgres/).

This section demonstrates using the Installation Wizard to install the Connectors on a Windows system. (Download the installer, and then, right-click on the installer icon, and select `Run As Administrator` from the context menu.)

When the `Language Selection` popup opens, select an installation language and click `OK` to continue to the `Setup` window.

![The OCL Connector Installation wizard](../images/ocl_installation_wizard.png)

Click `Next` to continue.

![The Installation dialog](../images/ocl_installation_dialog.png)

Use the `Installation Directory` dialog to specify the directory in which the connector will be installed, and click `Next` to continue.

![The Ready to Install dialog](../images/ready_to_install.png)

Click `Next` on the `Ready to Install` dialog to start the installation; popup dialogs confirm the progress of the installation wizard.

![The installation is complete](../images/ocl_installation_complete.png)

When the wizard informs you that it has completed the setup, click the `Finish` button to exit the dialog.

You can also use StackBuilder Plus to add or update the connector on an existing Advanced Server installation; to open StackBuilder Plus, select StackBuilder Plus from the Windows `Apps` menu.

![Starting StackBuilder Plus](../images/starting_stackbuilder_plus.png)

When StackBuilder Plus opens, follow the onscreen instructions. Select the `EnterpriseDB OCI Connector` option from the `Database Drivers` node of the tree control.

![Selecting the Connectors installer](../images/selecting_the_connectors_installer.png)

Follow the directions of the onscreen wizard to add or update an installation of the EDB Connectors.
